--- a/index.html
+++ b/index.html
@@ -96,6 +96,47 @@
             </div>
         </section>
 
+        <section class="page-selection cta">
+            <div class="container">
+                <div class="text-center">
+                    <h2 class="section-heading mb-4">
+                        <span class="section-heading-lower">Take the First Step to get to the Next Level</span>
+                    </h2>
+                    <p>Fill out the form below to receive our "3 Things You can do to Surf Better Today" video</p>
+                    <form accept-charset="UTF-8" action="https://bh964.infusionsoft.com/app/form/process/c77c39625baa924b0927c82bc8be57aa" class="infusion-form" id="inf_form_c77c39625baa924b0927c82bc8be57aa" method="POST">
+                        <input name="inf_form_xid" type="hidden" value="c77c39625baa924b0927c82bc8be57aa" />
+                        <input name="inf_form_name" type="hidden" value="3 Things you can do &#a;to Surf Better Today video" />
+                        <input name="infusionsoft_version" type="hidden" value="1.70.0.549365" />
+                        <div class="infusion-field">
+                            <label for="inf_field_FirstName">First Name *</label>
+                            <input id="inf_field_FirstName" name="inf_field_FirstName" placeholder="First Name *" type="text" />
+                        </div>
+                        <div class="infusion-field">
+                            <label for="inf_field_Email">Email *</label>
+                            <input id="inf_field_Email" name="inf_field_Email" placeholder="Email *" type="text" />
+                        </div>
+                        <div class="infusion-field">
+                            <label for="inf_field_Phone1">Primary Phone *</label>
+                            <input id="inf_field_Phone1" name="inf_field_Phone1" placeholder="Primary Phone *" type="text" />
+                        </div>
+                        <div>
+                            <div>&nbsp;</div>
+                        </div>
+                        <div class="infusion-submit">
+                            <button class="infusion-recaptcha" id="recaptcha_c77c39625baa924b0927c82bc8be57aa" type="submit">Submit</button>
+                        </div>
+                    </form>
+                    <script type="text/javascript" src="https://bh964.infusionsoft.app/app/webTracking/getTrackingCode"></script>
+                    <script type="text/javascript" src="https://bh964.infusionsoft.com/resources/external/recaptcha/production/recaptcha.js?b=1.70.0.549365-hf-202305112003"></script>
+                    <script src="https://www.google.com/recaptcha/api.js?onload=onloadInfusionRecaptchaCallback&render=explicit" async="async" defer="defer"></script>
+                    <script type="text/javascript" src="https://bh964.infusionsoft.com/app/timezone/timezoneInputJs?xid=c77c39625baa924b0927c82bc8be57aa"></script>
+                    <script type="text/javascript" src="https://bh964.infusionsoft.com/js/jquery/jquery-3.3.1.js"></script>
+                    <script type="text/javascript" src="https://bh964.infusionsoft.app/app/webform/overwriteRefererJs"></script>                    
+                </div> 
+            </div>
+        </section>
+        
+
         <section class="page-section cta">
             <div class="container">
                 <div class="row">
@@ -120,3 +161,4 @@
         <script src="js/scripts.js"></script>
     </body>
 </html>
+
